# herohirehero

./: README.md
frontend/: .env.development  .env.production  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js  config.js
network_hunt/: .env.example  .gitignore  PROPOSAL.md  README.md  pyproject.toml  requirements.txt
network_hunt/network_hunt/: __init__.py  cli.py  config.py
network_hunt/network_hunt/crawlers/: __init__.py  producthunt.py
network_hunt/network_hunt/db/: __init__.py  local.py  schema.sql
network_hunt/network_hunt/enrichers/: __init__.py  arxiv.py  base.py  github.py  serp.py  types.py
network_hunt/network_hunt/scrapers/: __init__.py  ph_profile.py
network_hunt/network_hunt/workers/: __init__.py  api_worker.py  base.py  post_scraper.py  profile_scraper.py
